--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-complete-guide",
   "version": "0.1.0",
-  "homepage": "http://MikeBurton89.github.io/expense_tracker.git",
   "private": true,
+  "homepage": "http://MikeBurton89.github.io/expense_tracker",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
